--- a/sass/blocks/_advantages.sass
+++ b/sass/blocks/_advantages.sass
@@ -32,7 +32,7 @@
         top: 90px
       &--next
         top: 92px
-        right: -28px
+        right: -15px
   &-swiper
     width: 100%
     height: 240px
