--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -59,7 +59,6 @@
       line-height: 22px
       color: $title-color
       overflow: hidden
-      overflow-y: auto
 .footer
   &__heading
     margin-bottom: 31px
